// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders cell as mask only even if cell is selectable and selected 1`] = `
<td
  aria-label="Terra.worklistDataGrid.maskedCell"
  aria-selected={true}
  className="worklist-data-grid-cell masked"
  onCopy={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={-1}
/>
`;

exports[`Cell verifies that a cell has the correct styles and no content when isMasked prop is true 1`] = `
<td
  aria-label="Terra.worklistDataGrid.maskedCell"
  aria-selected={false}
  className="worklist-data-grid-cell masked"
  onCopy={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={-1}
/>
`;

exports[`Cell verifies that a selected cell has the correct styles when isSelected prop is true 1`] = `
<td
  aria-label="Some Label Here"
  aria-selected={true}
  className="worklist-data-grid-cell selectable selected"
  onCopy={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={-1}
>
  <div
    className="cell-content"
  >
    Data in cell
  </div>
</td>
`;

exports[`Cell verifies that only a regular cell(TD) is created when isRowHeader prop is false 1`] = `
<td
  aria-selected={false}
  className="worklist-data-grid-cell selectable"
  onCopy={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={-1}
>
  <div
    className="cell-content"
  >
    Data in cell
  </div>
</td>
`;

exports[`Cell verifies that only a row header cell(TH) is created when isRowHeader prop is true 1`] = `
<th
  aria-selected={false}
  className="worklist-data-grid-cell selectable"
  onCopy={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={-1}
>
  <div
    className="cell-content"
  >
    Data in cell
  </div>
</th>
`;

exports[`Cell verifies that the cell rendered is marked blank when the cell content is empty 1`] = `
<td
  aria-label="Terra.worklistDataGrid.blank"
  aria-selected={false}
  className="worklist-data-grid-cell selectable blank"
  onCopy={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={-1}
/>
`;

exports[`Cell verifies that the cell rendered is marked selectable when isSelectable prop is true 1`] = `
<td
  aria-selected={false}
  className="worklist-data-grid-cell selectable"
  onCopy={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={-1}
>
  <div
    className="cell-content"
  >
    Data in cell
  </div>
</td>
`;
